[gd_scene load_steps=52 format=2]

[ext_resource path="res://Scripts/Players/Aaron/PlayerScript.gd" type="Script" id=1]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile039.png" type="Texture" id=2]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile040.png" type="Texture" id=3]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile041.png" type="Texture" id=4]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile006.png" type="Texture" id=5]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile007.png" type="Texture" id=6]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile008.png" type="Texture" id=7]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile003.png" type="Texture" id=8]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile004.png" type="Texture" id=9]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile005.png" type="Texture" id=10]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile000.png" type="Texture" id=11]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile001.png" type="Texture" id=12]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile002.png" type="Texture" id=13]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile036.png" type="Texture" id=14]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile037.png" type="Texture" id=15]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile038.png" type="Texture" id=16]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile012.png" type="Texture" id=17]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile013.png" type="Texture" id=18]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile014.png" type="Texture" id=19]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile027.png" type="Texture" id=20]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile028.png" type="Texture" id=21]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile029.png" type="Texture" id=22]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile024.png" type="Texture" id=23]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile025.png" type="Texture" id=24]
[ext_resource path="res://Resources/Sprites/Players/Aaron/tile026.png" type="Texture" id=25]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile048.png" type="Texture" id=26]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile049.png" type="Texture" id=27]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile050.png" type="Texture" id=28]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile084.png" type="Texture" id=29]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile085.png" type="Texture" id=30]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile086.png" type="Texture" id=31]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile060.png" type="Texture" id=32]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile061.png" type="Texture" id=33]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile062.png" type="Texture" id=34]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile042.png" type="Texture" id=35]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile043.png" type="Texture" id=36]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile044.png" type="Texture" id=37]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile018.png" type="Texture" id=38]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile019.png" type="Texture" id=39]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile020.png" type="Texture" id=40]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile072.png" type="Texture" id=41]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile073.png" type="Texture" id=42]
[ext_resource path="res://Resources/Sprites/Players/Britney/tile074.png" type="Texture" id=43]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile030.png" type="Texture" id=44]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile031.png" type="Texture" id=45]
[ext_resource path="res://Resources/Sprites/Players/Bummer/tile032.png" type="Texture" id=46]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile015.png" type="Texture" id=47]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile016.png" type="Texture" id=48]
[ext_resource path="res://Resources/Sprites/Players/Ashley/tile017.png" type="Texture" id=49]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "Ashley Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "Bummer Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "Ashley Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ) ],
"loop": true,
"name": "Aaron Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "Aaron Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "Aaron Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "Ashley Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ) ],
"loop": true,
"name": "Aaron Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ) ],
"loop": true,
"name": "Britney Down",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ) ],
"loop": true,
"name": "Britney Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ) ],
"loop": true,
"name": "Britney Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ) ],
"loop": true,
"name": "Bummer Up",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": true,
"name": "Bummer Left",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ) ],
"loop": true,
"name": "Britney Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ) ],
"loop": true,
"name": "Bummer Right",
"speed": 5.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ) ],
"loop": true,
"name": "Ashley Left",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 19.8614
height = 27.855

[node name="Player" type="Area2D"]
position = Vector2( 194.542, 102.697 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
velocity = 150
bombCapacity = 1
FireCapacity = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.38329, 7.54709 )
frames = SubResource( 1 )
animation = "Aaron Down"
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.42947, 11.3523 )
shape = SubResource( 2 )

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Player_body_entered"]
[connection signal="makeBomb" from="." to="." method="_on_Player_makeBomb"]
[connection signal="timeout" from="Cooldown" to="." method="_on_Cooldown_timeout"]
